--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "serve": "node server",
-    "start": "node server"
+    "serve": "node server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
