--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "serve": "node server.js",
-    "start": "node server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "apollo-server": "^3.6.1",
-    "apollo-server-express": "^3.6.2",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^14.2.0",
-    "graphql": "^16.2.0",
-    "graphql-subscriptions": "^2.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.5"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.3"
-  }
+    "name": "lil-tweet",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server/server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server/server.js",
+        "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+        "install": "cd server && npm i && cd ../client && npm i",
+        "seed": "cd server && npm run seed",
+        "build": "cd client && npm run build"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/mejialaguna/lil-tweet.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/mejialaguna/lil-tweet"
+    },
+    "homepage": "https://github.com/mejialaguna/lil-tweet",
+    "devDependencies": {
+        "concurrently": "^6.3.0"
+    }
 }
