--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "apollo-server": "^3.6.2",
     "apollo-server-express": "^2.12.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
     "express": "^4.17.1",
     "graphql": "^15.0.0",
     "graphql-subscriptions": "^2.0.0",
