--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "homepage": "https://github.com/mejialaguna/lil-tweet",
     "devDependencies": {
         "concurrently": "^6.3.0"
+    },
+    "engines": {
+        "node": "16.x"
     }
 }
